# faissrag

./: Dockerfile  README.md  pyproject.toml  start.sh  supervisord.conf
app/: server.py
data/: output-1.json
gptweb/: server.py
